# bankwidget-plus

./: .env_template  .gitignore  README.md  pyproject.toml
data/: ~$operations.xlsx
src/bankwidget_plus/: config.py  data_loader.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_data_loader.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
