[tool.poetry]
name = "bankwidget-plus"
version = "0.1.0"
description = "App for masking cards and analyzing expenses"
authors = ["GuyMonagan <werevalkury@gmail.com>"]
packages = [
    { include = "bankwidget_plus", from = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.0.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
isort = "^5.12"
black = "^24.0"
mypy = "^1.0"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
